@@ -9,6 +9,7 @@
 #                                                                                          #
 ############################################################################################
 
+[9] --> Add PvP-Ranks System.
 [8] --> Implemented Crowd Control Delay.
 [7] --> Fix Slice and Dice and Honor Among Thieves.
 [6] --> Add script hunterpet vendor.
